[package]
name = "swift-bat"
version = "0.2.0"
description = "Swift bindings to read battery level and state"
authors = ["Aengus Wright<aengus@horsesporttechnology.au>"]
edition = "2021"
readme = "README.md"
maintenance = { status = "passively-maintained" }

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
swift-rs = "1.0.5"

[build-dependencies]
swift-rs = { version = "1.0.5", features = ["build"] }
